# hs-vscode-debug

./: .gitignore  .travis.yml  LICENSE  README.md  hs-vscode-debug.cabal
app/: Main.hs
src/: DebugProtocol.hs  Debugger.hs
