name:                hs-vscode-debug
version:             0.1.0.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vavans/hs-vscode-debug
license:             BSD3
license-file:        LICENSE
author:              Julien V.
maintainer:          vannnns@gmail.com
copyright:           Julien V.
category:            IT
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Debugger
                     , DebugProtocol
  build-depends:       base >= 4.7 && < 5

executable hs-vscode-debug
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , network
                     , hs-vscode-debug

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-vscode-debug
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/vavans/hs-vscode-debug
